# Gale

./: .env.example  .gitignore  CODEOWNERS  Readme.md  config.ini  config.yaml  main.py  pyproject.toml  storm_v2
src/agents/content_extractor/: extractor.py
src/agents/criticizer/: critic.py
src/agents/format_checker/: config.py  formatter.py
src/agents/initial_summarizer/: initial_summarizer.py
src/agents/outline_generator/: outline_gen.py
src/graphs/: gale_graph.py  storm_ref.py
src/utils/: togetherchain.py
tests/: test1.py
